Skip Unsafe byte[] access due to lack of operand match on x64